# src/server/endpoints.rs
@@ -48,6 +48,8 @@ pub enum ExtraMachineInfoResponse {
     Bambu {
         /// The current stage of the machine as defined by Bambu which can include errors, etc.
         current_stage: Option<bambulabs::message::Stage>,
+        /// The nozzle diameter of the machine.
+        nozzle_diameter: bambulabs::message::NozzleDiameter,
         // Only run in debug mode. This is just to help us know what information we have.
         #[cfg(debug_assertions)]
         #[cfg(not(test))]
@@ -107,6 +109,7 @@ impl MachineInfoResponse {
                         .ok_or_else(|| anyhow::anyhow!("no status for bambu"))?;
                     Some(ExtraMachineInfoResponse::Bambu {
                         current_stage: status.stg_cur,
+                        nozzle_diameter: status.nozzle_diameter,
                         #[cfg(debug_assertions)]
                         #[cfg(not(test))]
                         raw_status: status,
